# parsekit

./: build.sh  dune-project  json-parsekit.opam  parsekit-quickcheck.opam  parsekit.opam  simd.opam
bench/: last_run.txt  run_bench.ml
bench/data/custom/: rand_unicode_utf8.json
bench/data/nativejson-benchmark/: ACKNOWLEDGEMENTS
json/bench/: dune  import.ml  last_run.txt  run_bench.ml  run_bench.sh
json/bench/data/nativejson-benchmark/: twitter-ascii.json
json/src/: dune  json_parsekit.ml  json_parsekit.mli
json/test/: dune  import.ml  test_json.ml
json/test/compliance/: ACKNOWLEDGEMENTS
quickcheck/: dune  import.ml  json.ml  json.mli  parsekit_quickcheck.ml  utf8_encoded.ml  utf8_encoded.mli
simd/discover/: discover.ml  dune
simd/src/: dune  simd.h  simd.ml  simd.mli  simd_stubs.cpp
simd/test/: dune  test_simd.ml
src/: dune  parsekit.ml  parsekit.mli  utf8_encoded.ml  utf8_encoded.mli
test/: dune  import.ml  test_combinator.ml  test_primitives.ml  test_utf8.ml
